# sv2-apps

integration-tests/: Cargo.toml
integration-tests/lib/: mod.rs
integration-tests/tests/: monitoring_integration.rs
miner-apps/jd-client/src/lib/: config.rs  mod.rs
miner-apps/translator/: Cargo.toml
miner-apps/translator/src/lib/: config.rs  mod.rs
pool-apps/pool/: Cargo.toml
pool-apps/pool/src/lib/: config.rs  mod.rs
pool-apps/pool/src/lib/channel_manager/: mining_message_handler.rs  mod.rs
stratum-apps/: Cargo.toml
stratum-apps/src/: tp_type.rs
stratum-apps/src/monitoring/: http_server.rs  mod.rs
