[package]
name = "integration_tests_sv2"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "Sv2 Integration Tests Framework"
documentation = "https://github.com/stratum-mining/stratum"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

exclude = ["resources/high_diff_chain.tar.gz"]

[dependencies]
stratum-apps = { version = "0.3.0", path = "../stratum-apps", features = ["network", "config"] }
jd_client_sv2 = { version = "0.1.3", path = "../miner-apps/jd-client" }
pool_sv2 = { version = "0.2.1", path = "../pool-apps/pool" }
translator_sv2 = { version = "0.2.1", path = "../miner-apps/translator" }
async-channel = { version = "1.5.1", default-features = false }
corepc-node = { version = "0.7.0", default-features = false, features = ["28_0"] }
minreq = { version = "2.12.0", default-features = false, features = ["https"] }
once_cell = { version = "1.19.0", default-features = false }
tokio = { version="1.44.1", default-features = false,  features = ["tracing"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
hex = "0.4.3"
clap = { version = "^4.5.4", features = ["derive"] }
serde_json = "1"

# Direct dependencies kept only for the embedded `mining_device` module.
# Remove this block when removing:
# - `integration-tests/lib/mining_device/`
# - `integration-tests/tests/mining_device_fast_hasher_equivalence.rs`
# - `integration-tests/benches/mining_device_*`
rand = "0.8.4"
sha2 = { version = "0.10.6", features = ["compress", "asm"] }
primitive-types = "0.13.1"
num-format = "0.4"

[dev-dependencies]
# Dev-only dependencies kept only for `mining_device` test/bench coverage.
# Remove together with the `mining_device` benches/test listed below.
# Criterion 0.5 without default features; combined with a dev pin of `half = 2.3.1` to stay Rust 1.75-compatible.
criterion = { version = "0.5", default-features = false, features = ["stable"] }
half = "=2.3.1"
num_cpus = "1"

[lib]
path = "lib/mod.rs"

# Binary target preserved from the former standalone `mining_device` crate.
[[bin]]
name = "mining_device"
path = "bin/mining_device.rs"

# Bench targets preserved from the former standalone `mining_device` crate.
# Remove these entries when the embedded `mining_device` module is deprecated.
[[bench]]
name = "mining_device_hasher_bench"
harness = false

[[bench]]
name = "mining_device_microbatch_bench"
harness = false

[[bench]]
name = "mining_device_scaling_bench"
harness = false
