[package]
name = "translator_sv2"
version = "0.2.2"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV1 to SV2 translation proxy"
documentation = "https://docs.rs/translator_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "translator", "proxy"]

[lib]
name = "translator_sv2"
path = "src/lib/mod.rs"

[[bin]]
name = "translator_sv2"
path = "src/main.rs"

[dependencies]
stratum-apps = { version = "0.3.0", path = "../../stratum-apps", features = ["translator"] }
async-channel = "1.5.1"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
hotpath = "0.14.0"
dashmap = "6.1.0"

[features]
default = ["monitoring"]
monitoring = ["stratum-apps/monitoring"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]


[dev-dependencies]
sha2 = "0.10.6"
